--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/vercel": "^8.0.4",
+    "@octokit/oauth-app": "^8.0.1",
+    "@octokit/rest": "^22.0.0",
     "@playform/compress": "^0.1.9",
     "@unocss/preset-wind3": "^66.1.3",
     "@unocss/reset": "^66.1.3",
@@ -28,6 +30,7 @@
     "astro": "^5.8.1",
     "astro-pure": "1.3.1",
     "katex": "^0.16.22",
+    "marked": "^16.1.2",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.2",
