--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@waline/client": "^3.5.7",
     "astro": "^5.8.1",
     "astro-pure": "1.3.1",
+    "decap-cms-app": "^3.8.3",
     "katex": "^0.16.22",
     "marked": "^16.1.2",
     "rehype-katex": "^7.0.1",
