--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,7 +14,7 @@ media_folder: "src/assets/images"
 public_folder: "src/assets/images"
 
 publish_mode: editorial_workflow
-logo_url: public/favicon/favicon.ico
+logo_url: public/favicon/android-chrome-512x512.png
 
 collections:
   - name: "blog"
