--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,12 +8,85 @@ backend:
     uploadMedia: 'Media: upload "{{path}}"'
     deleteMedia: 'Media: delete "{{path}}"'
 
+# User Role Configuration
+roles:
+  - name: "admin"
+    label: "Administrator"
+    description: "Full access permissions"
+    permissions:
+      - "publish"
+      - "review"
+      - "create"
+      - "update"
+      - "delete"
+  
+  - name: "editor"
+    label: "Editor"
+    description: "Can create and edit content, but cannot publish"
+    permissions:
+      - "create"
+      - "update"
+      - "review"
+  
+  - name: "author"
+    label: "Author"
+    description: "Can only create draft content"
+    permissions:
+      - "create"
+      - "update"
+
 local_backend: true
 
 media_folder: "src/assets/images"
 public_folder: "src/assets/images"
 
 publish_mode: editorial_workflow
+
+# Workflow Configuration
+workflow:
+  # Workflow States
+  states:
+    - name: "draft"
+      label: "Draft"
+      description: "Content is being written"
+      color: "#ff6b6b"
+    
+    - name: "review"
+      label: "In Review"
+      description: "Content is waiting for review"
+      color: "#feca57"
+    
+    - name: "ready"
+      label: "Ready"
+      description: "Content has been reviewed and approved, waiting for publication"
+      color: "#48dbfb"
+    
+    - name: "published"
+      label: "Published"
+      description: "Content has been published to the website"
+      color: "#1dd1a1"
+  
+  # State Transition Rules
+  transitions:
+    - from: "draft"
+      to: "review"
+      label: "Submit for Review"
+      permissions: ["admin", "editor"]
+    
+    - from: "review"
+      to: "ready"
+      label: "Approve"
+      permissions: ["admin", "editor"]
+    
+    - from: "review"
+      to: "draft"
+      label: "Request Changes"
+      permissions: ["admin", "editor"]
+    
+    - from: "ready"
+      to: "published"
+      label: "Publish"
+      permissions: ["admin"]
 
 logo_url: /favicon/android-chrome-512x512.png
 
@@ -23,6 +96,12 @@ collections:
     folder: "src/content/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    # Permission Control
+    publish_mode: editorial_workflow
+    # Only administrators and editors can create blog posts
+    create_permissions: ["admin", "editor"]
+    # Only administrators can publish
+    publish_permissions: ["admin"]
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
@@ -40,6 +119,12 @@ collections:
     folder: "src/content/activities"
     create: true
     slug: "{{slug}}"
+    # Permission Control
+    publish_mode: editorial_workflow
+    # Only administrators and editors can create activities
+    create_permissions: ["admin", "editor"]
+    # Only administrators can publish
+    publish_permissions: ["admin"]
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
@@ -58,6 +143,11 @@ collections:
     folder: "src/content/docs"
     create: true
     slug: "{{slug}}"
+    # Permission Control
+    publish_mode: editorial_workflow
+    # Only administrators can create and publish documentation
+    create_permissions: ["admin"]
+    publish_permissions: ["admin"]
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
