--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -54,7 +54,7 @@ collections:
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Publish Date", name: "publishDate", widget: "datetime" }
       - { label: "Tags", name: "tags", widget: "list", field: { label: "Tag", name: "tag", widget: "string" } }
-      - { label: "Activity Type", name: "activityType", widget: "select", options: ["event", "workshop", "meetup", "conference", "project"] }
+      - { label: "Activity Type", name: "activityType", widget: "select", options: ["学术活动", "社区活动", "读书会", "achievement", "other"] }
       - { label: "Location", name: "location", widget: "string", required: false }
       - { label: "Duration", name: "duration", widget: "string" }
       - { label: "Participants", name: "participants", widget: "number", required: false }
